# discord_ai

./: .env  .gitignore  Cargo.toml  README.md
.fleet/: run.json
src/: lib.rs  main.rs  openai.rs  training.rs
src/commands/: invoke.rs
tests/: integration_test.rs
